common/force-app/main/default/objects/Lead/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <inlineHelpText>This field tells you if the goal is for branding or traffic.</inlineHelpText>
    <label>utm campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>