common/force-app/main/default/objects/Lead/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <inlineHelpText>This field describes the exact product of the goal e.g &quot;Brand - Park Ridge&quot;</inlineHelpText>
    <label>utm content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>