common/force-app/main/default/objects/Lead/fields/utm_keyword__c.field-meta.xml
<CustomField>
    <fullName>utm_keyword__c</fullName>
    <inlineHelpText>This field shows that keyword was searched/clicked when the google search was made.</inlineHelpText>
    <label>utm keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>