common/force-app/main/default/objects/Lead/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <inlineHelpText>This field tells you the type of campaign being run.</inlineHelpText>
    <label>utm medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>