common/force-app/main/default/objects/Lead/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <inlineHelpText>This field tells you the channel the lead has come from.</inlineHelpText>
    <label>utm source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>