common/force-app/main/default/objects/Lead/fields/Value_of_investment_portfolio__c.field-meta.xml
<CustomField>
    <fullName>Value_of_investment_portfolio__c</fullName>
    <label>Value of investment portfolio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>