common/force-app/main/default/objects/Lead/fields/VCPP_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>VCPP_Lead_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>VCPP Lead Number</label>
    <type>AutoNumber</type>
</CustomField>