common/force-app/main/default/objects/Lead/fields/VCPP_Round_Robin_ID__c.field-meta.xml
<CustomField>
    <fullName>VCPP_Round_Robin_ID__c</fullName>
    <formula>MOD(Lead_Auto_Number_VCPP__c ,2) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VCPP Round Robin ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>