common/force-app/main/default/objects/Lead/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <label>Web Source</label>
    <type>TextArea</type>
</CustomField>