common/force-app/main/default/objects/Lead/fields/what_best_describes_you__c.field-meta.xml
<CustomField>
    <fullName>what_best_describes_you__c</fullName>
    <label>what best describes you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Downsizer</fullName>
            </value>
            <value>
                <fullName>first_home_buyer</fullName>
                <label>First Home Buyer</label>
            </value>
            <value>
                <fullName>investor</fullName>
                <label>Investor</label>
            </value>
            <value>
                <fullName>owner_occupier</fullName>
                <label>Owner Occupier</label>
            </value>
            <value>
                <fullName>upsizer</fullName>
                <label>Upsizer</label>
            </value>
            <value>
                <fullName>Second Home Buyer</fullName>
            </value>
            <value>
                <fullName>Downsize</fullName>
                <isActive>false</isActive>
                <label>Downsize</label>
            </value>
            <value>
                <fullName>invest</fullName>
                <isActive>false</isActive>
                <label>invest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>