common/force-app/main/default/objects/Lead/fields/What_is_your_price_range__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_price_range__c</fullName>
    <label>What is your price range?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$200K - $300K</fullName>
            </value>
            <value>
                <fullName>$300K - $400K</fullName>
            </value>
            <value>
                <fullName>$400k-$500k</fullName>
            </value>
            <value>
                <fullName>$500k-$600k</fullName>
            </value>
            <value>
                <fullName>$600K - $700K</fullName>
            </value>
            <value>
                <fullName>$700K - $800K</fullName>
            </value>
            <value>
                <fullName>$800K - $1M</fullName>
            </value>
            <value>
                <fullName>$1M +</fullName>
            </value>
            <value>
                <fullName>$170k - $180k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>