common/force-app/main/default/objects/Lead/fields/When_would_you_like_to_invest__c.field-meta.xml
<CustomField>
    <fullName>When_would_you_like_to_invest__c</fullName>
    <description>When would you like to invest?</description>
    <label>When would you like to invest?</label>
    <type>Date</type>
</CustomField>