common/force-app/main/default/objects/Lead/fields/Wholesale__c.field-meta.xml
<CustomField>
    <fullName>Wholesale__c</fullName>
    <formula>IF(
  ISPICKVAL(Wholesale_Status__c, &quot;&quot;),
  &quot;No&quot;,
  TEXT(Wholesale_Status__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesale</label>
    <type>Text</type>
</CustomField>