common/force-app/main/default/objects/Lead/fields/Wholesale_Status__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Status__c</fullName>
    <inlineHelpText>This field is used when a lead fills in their Facebook form and their interpretation of whether they are wholesale or not.</inlineHelpText>
    <label>Are you a wholesale investor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>