common/force-app/main/default/objects/Lead/recordTypes/Founders.recordType-meta.xml
<RecordType>
    <fullName>Founders</fullName>
    <active>true</active>
    <businessProcess>Founders</businessProcess>
    <label>Founders</label>
</RecordType>