common/force-app/main/default/objects/Lead/recordTypes/Referral_Leads.recordType-meta.xml
<RecordType>
    <fullName>Referral_Leads</fullName>
    <active>true</active>
    <businessProcess>VC</businessProcess>
    <label>Referral Leads</label>
</RecordType>