common/force-app/main/default/objects/Lead/recordTypes/VC.recordType-meta.xml
<RecordType>
    <fullName>VC</fullName>
    <active>true</active>
    <businessProcess>VC</businessProcess>
    <label>VC</label>
</RecordType>