common/force-app/main/default/objects/Lead/recordTypes/VCPP.recordType-meta.xml
<RecordType>
    <fullName>VCPP</fullName>
    <active>true</active>
    <businessProcess>VC</businessProcess>
    <label>VCPP</label>
</RecordType>