common/force-app/main/default/objects/Lead/recordTypes/Ventures.recordType-meta.xml
<RecordType>
    <fullName>Ventures</fullName>
    <active>true</active>
    <businessProcess>VC</businessProcess>
    <label>Ventures</label>
</RecordType>