common/force-app/main/default/objects/Lead/validationRules/Email_opt_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_opt_Validation</fullName>
    <active>true</active>
    <description>Will not allow an opt in and out a the same time.</description>
    <errorConditionFormula>AND(
    Email_Opt_In__c = TRUE,
    HasOptedOutOfEmail = TRUE
)</errorConditionFormula>
    <errorMessage>A lead cannot be both email opted-in and opted-out at the same time. Please check the Email Opt-In and Opt-Out fields.</errorMessage>
</ValidationRule>