common/force-app/main/default/objects/Lead/validationRules/In_Progress_Lead_VC.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Progress_Lead_VC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
($RecordType.Name= &apos;VC&apos;),
ISPICKVAL( Status , &apos;Converted&apos; ),

OR(
(ISBLANK( Background_information__c ))

))</errorConditionFormula>
    <errorMessage>Please fill in background information on the &quot;In Progress&quot; stage before moving to converted.</errorMessage>
</ValidationRule>