common/force-app/main/default/objects/Lead/validationRules/Lead_Interest_Required_For_ManualNurture.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Interest_Required_For_ManualNurture</fullName>
    <active>true</active>
    <description>Ensures that the lead interest field is filled in when the leadsource is set to manual nurturing &amp; outreach. This rule prevents saving a lead record with a blank lead interest if the lead is manually created.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(LeadSource, &quot;Manual Nurturing &amp; Outreach&quot;),
  ISBLANK(Lead_Interest__c),
  OR(
    $RecordType.Name = &apos;VC&apos;,
    $RecordType.Name = &apos;VCPP&apos;
  )
)</errorConditionFormula>
    <errorMessage>&quot;Please enter the product code for the product the lead is interested in&quot;</errorMessage>
</ValidationRule>