common/force-app/main/default/objects/Lead/validationRules/Lead_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Lost</fullName>
    <active>true</active>
    <description>Indicate Lost Reason of Lead Stage is set to Lost</description>
    <errorConditionFormula>AND
(
    ISPICKVAL(Status, &apos;Lost&apos;),
    ISBLANK(Loss_Reason__c),
    $RecordType.Name &lt;&gt; &apos;Ventures&apos;
)</errorConditionFormula>
    <errorMessage>Please indicate the Loss Reason.</errorMessage>
</ValidationRule>