common/force-app/main/default/objects/Lead/listViews/All_Leads_All_Time.listView-meta.xml
<ListView>
    <fullName>All_Leads_All_Time</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Web_Source__c</columns>
    <columns>Investment_Amount__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Email_Opt_In__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads - All Time</label>
</ListView>