common/force-app/main/default/objects/Lead/listViews/All_VC_Open_Leads.listView-meta.xml
<ListView>
    <fullName>All_VC_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Web_Source__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Wholesale_Status__c</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>Number_of_Attempts__c</columns>
    <columns>Round_Robin_Id__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All VC Open Leads</label>
</ListView>