common/force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Web_Source__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Loss_Reason__c</columns>
    <columns>Number_of_Attempts__c</columns>
    <columns>Investment_Amount__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Related_EOI__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Contact Attempted</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>notContain</operation>
        <value>russia</value>
    </filters>
    <label>All Open Leads</label>
</ListView>