common/force-app/main/default/objects/Lead/listViews/CM_Lead.listView-meta.xml
<ListView>
    <fullName>CM_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>CM</label>
    <queue>CM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>