common/force-app/main/default/objects/Lead/listViews/Founders.listView-meta.xml
<ListView>
    <fullName>Founders</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Next_Step__c</columns>
    <columns>Next_Step_Date_Time__c</columns>
    <columns>Next_Step_Date_Validation__c</columns>
    <columns>Background_information__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Founders</value>
    </filters>
    <label>Founders</label>
</ListView>