common/force-app/main/default/objects/Lead/listViews/Gr.listView-meta.xml
<ListView>
    <fullName>Gr</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Greig</value>
    </filters>
    <label>Greig - Last contated</label>
    <sharedTo>
        <role>Capital_Managers</role>
    </sharedTo>
</ListView>