common/force-app/main/default/objects/Lead/listViews/Lost_Leads_All.listView-meta.xml
<ListView>
    <fullName>Lost_Leads_All</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Loss_Reason__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Web_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Lost</value>
    </filters>
    <label>Lost Leads (All)</label>
</ListView>