common/force-app/main/default/objects/Lead/listViews/Louise_s_View.listView-meta.xml
<ListView>
    <fullName>Louise_s_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Web_Source__c</columns>
    <columns>Email_Opt_In__c</columns>
    <columns>LEAD.EMAIL_OPT_OUT</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>Comments__c</columns>
    <columns>Investment_Amount_Currency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Web_Source__c</field>
        <operation>notContain</operation>
        <value>wavex,earthbuilt,laundry,ausbiz,goodness,befitfood,rostered,locally hosted</value>
    </filters>
    <filters>
        <field>Web_Source__c</field>
        <operation>notContain</operation>
        <value>VCPP</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Lead.Founders,Lead.VCPP</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>11/13/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notContain</operation>
        <value>vport</value>
    </filters>
    <filters>
        <field>Web_Source__c</field>
        <operation>notContain</operation>
        <value>Portfolio Founder Management</value>
    </filters>
    <label>Bob&apos;s View</label>
</ListView>