common/force-app/main/default/objects/Lead/listViews/Open_Leads.listView-meta.xml
<ListView>
    <fullName>Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>Number_of_Attempts__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Lost</value>
    </filters>
    <label>Open Leads</label>
</ListView>