common/force-app/main/default/objects/Lead/listViews/P_Ridge_EOI.listView-meta.xml
<ListView>
    <fullName>P_Ridge_EOI</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Web_Source__c</field>
        <operation>equals</operation>
        <value>P-Ridge EOI</value>
    </filters>
    <label>P-Ridge EOI</label>
</ListView>