common/force-app/main/default/objects/Lead/listViews/Platform_Registrations.listView-meta.xml
<ListView>
    <fullName>Platform_Registrations</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Web_Source__c</field>
        <operation>equals</operation>
        <value>Venture Platform</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Lost</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>VC Website Organic</value>
    </filters>
    <label>Platform Registrations</label>
</ListView>